# lung-nodule-classification

./: .gitignore  EDA.ipynb  README.md  get_images.py  pyproject.toml  results.txt  train_test_split.py
hybrid_dl/: dimensionality_reduction.py  dl_models.py  feature_extraction.py  features_train_vgg.csv  features_valid_resnet.csv  features_valid_vgg.csv  features_with_labels_train.csv  new_features_train_vgg.csv  prediction.py
models/: model_3d.py  model_transformer.py
results/: training_results.txt
results/2D_Adam_10e_64bs/: auc_vs_epoch_2D_Adam_10e_64bs.csv  config.npy  loss_vs_iteration_2D_Adam_10e_64bs.csv
results/DataAug_Resnet18_10e_64bs/: auc_vs_epoch_DataAug_Resnet18_10e_64bs.csv  config.npy  loss_vs_iteration_DataAug_Resnet18_10e_64bs.csv
results/Resnet18_15e_64bs_lr2/: auc_vs_epoch_Resnet18_15e_64bs_lr2.csv  config.npy  loss_vs_iteration_Resnet18_15e_64bs_lr2.csv
results/Smote_Resnet18_10e_64bs/: auc_vs_epoch_Smote_Resnet18_10e_64bs.csv  config.npy  loss_vs_iteration_Smote_Resnet18_10e_64bs.csv
results/Smote_Resnet18_15e_64bs/: auc_vs_epoch_Smote_Resnet18_15e_64bs.csv  config.npy  loss_vs_iteration_Smote_Resnet18_15e_64bs.csv
results/Smote_Resnet18_15e_64bs_lr/: auc_vs_epoch_Smote_Resnet18_15e_64bs_lr.csv  config.npy  loss_vs_iteration_Smote_Resnet18_15e_64bs_lr.csv
results/Smote_Resnet18_15e_64bs_lr2/: config.npy  (+2 more)
testing/: confusion_matrix.py  data_augmentation.ipynb  data_augmentation.py  grad_cam.py  smote.ipynb  smote.py
training/: dataloader.py  display_results.py  experiment_config.py  train.py
utils/: train_test_split.py
(+21 files in other folders)
