[project]
name = "lung-cancer-location"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "dotenv>=0.9.9",
    "matplotlib==3.5.2",
    "numpy==1.22.3",
    "pandas==1.4.2",
    "psutil>=7.0.0",
    "scikit-learn==1.5.2",
    "scipy==1.8.1",
    "seaborn==0.11.2",
    "simpleitk==2.2.1",
    "torch==2.0.0",
    "torchaudio==2.0.1",
    "torchvision==0.15.0",
    "tqdm>=4.67.1",
]
